Bug 769359 - Adds step attribute and stepUp/stepDown method support for <input type='date'>. r=mounir